fix: 💄 hide table scrollbar when not needed

--- a/layouts/partials/paige/style-first.css
+++ b/layouts/partials/paige/style-first.css
@@ -41,9 +41,3 @@
         }
     }
 }
-
-table { 
-    max-width:100vw;
-    overflow-y:scroll;
-    display: block;
-}
